2016-01-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/69053
	* g++.dg/torture/pr69053.C: New testcase.

2016-01-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/69168
	* gcc.dg/torture/pr69168.c: New testcase.

2016-01-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/69157
	* gcc.dg/torture/pr69157.c: New testcase.

2016-01-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/69174
	* gcc.dg/torture/pr69174.c: New testcase.

2016-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR c++/66808
	PR c++/69000
	* g++.dg/tls/pr66808.C: New test.
	* g++.dg/tls/pr69000.C: New test.

2016-01-11  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.target/powerpc/swaps-p8-23.c: New test.
	* gcc.target/powerpc/swaps-p8-24.c: Likewise.

2016-01-11  John David Anglin  <danglin@gcc.gnu.org>

	PR tree-optimization/68356
	* gcc.dg/torture/pr68264.c: Disable exp2 ERANGE test on hppa unix.

2016-01-12  Kugan Vivekanandarajah  <kuganv@linaro.org>
	    Jim Wilson  <jim.wilson@linaro.org>

	PR target/69194
	* gcc.target/arm/pr69194.c: New test.

2016-01-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/69225
	* gcc.target/i386/pr69225-1.c: New test.
	* gcc.target/i386/pr69225-2.c: Likewise.
	* gcc.target/i386/pr69225-3.c: Likewise.
	* gcc.target/i386/pr69225-4.c: Likewise.
	* gcc.target/i386/pr69225-5.c: Likewise.
	* gcc.target/i386/pr69225-6.c: Likewise.

2016-01-11  Jakub Jelinek  <jakub@redhat.com>

	PR target/67462
	* gcc.dg/ifcvt-3.c: Only compile on lp64 targets, include also i?86
	if lp64.

	PR target/69071
	* gcc.dg/pr69071.c: New test.

	PR c++/69211
	* g++.dg/opt/pr69211.C: New test.

	PR tree-optimization/69214
	* gcc.c-torture/compile/pr69214.c: New test.

2016-01-11  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/pr66232-10.c: Do not compile on ia32 target.
	* gcc.target/i386/pr66232-11.c: Ditto.
	* gcc.target/i386/pr66232-12.c: Ditto.
	* gcc.target/i386/pr66232-13.c: Ditto.

2016-01-11  Richard Biener  <rguenther@suse.de>